--- a/index.html
+++ b/index.html
@@ -130,20 +130,16 @@
                         </div>
                         <ul class="banks-grid reduction__banks-grid">
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/visa.png" width="74" height="74"
-                                    alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/visa.png" alt=""></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/alat.png" width="74" height="74"
-                                    alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/alat.png" alt=""></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/paypal.png" width="74" height="74"
-                                    alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/paypal.png" alt=""></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/gtbank.png" width="74" height="74"
-                                    alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/gtbank.png" alt=""></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
@@ -151,8 +147,7 @@
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
                             <li class="banks-grid__item"></li>
-                            <li class="banks-grid__item"><img src="./images/money/stripe.png" width="74" height="74"
-                                    alt=""></li>
+                            <li class="banks-grid__item"><img src="./images/money/stripe.png" alt=""></li>
                             <li class="banks-grid__item"></li>
                         </ul>
                     </div>
@@ -164,29 +159,21 @@
                 <h3 class="features__heading">Transact seamlessly with...</h3>
                 <p class="features__desc">Connect your other accounts to Kobodrop seamlessly. Kobodrop supports 200+
                     integrations with other payment platforms like stripe, paypal, payoneer and others</p>
-                <div class="features-grid features__features-grid">
-                    <svg width="116" height="80" class="features-grid__icon">
-                        <use href="./images/icons.svg#icon-klarna"></use>
-                    </svg>
-                    <svg width="116" height="80" class="features-grid__icon">
-                        <use href="./images/icons.svg#icon-stripe"></use>
-                    </svg>
-                    <svg width="116" height="80" class="features-grid__icon">
-                        <use href="./images/icons.svg#icon-paypal"></use>
-                    </svg>
-                    <img src="./images/money/partners/bedc.png" width="116" height="80" alt="">
-                    <svg width="116" height="80">
-                        <use href="./images/icons.svg#icon-mastercard"></use>
-                    </svg>
-                    <img src="./images/money/partners/mtn.png" width="116" height="80" alt="">
-                    <img src="./images/money/partners/airtel.png" width="116" height="80" alt="">
-                    <svg width="116" height="80">
-                        <use href="./images/icons.svg#icon-payoneer"></use>
-                    </svg>
-                    <img src="./images/money/partners/visa.png" width="116" height="80" alt="">
-                    <img src="./images/money/partners/9mobile.png" width="116" height="80" alt="">
-                    <img src="./images/money/partners/kejs.png" width="116" height="80" alt="">
-                    <img src="./images/money/partners/dstv.png" width="116" height="80" alt="">
+                <div class="features__grid-box">
+                    <ul class="features-grid features__features-grid">
+                        <li class="features-grid__item"><img src="./images/integrations/Klarna.svg" alt="Klarna" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/Stripe.svg" alt="Stripe" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/PayPal.svg" alt="PayPal" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/bedc.png" alt="BEDC" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/Mastercard.svg" alt="Mastercard" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/mtn.png" alt="MTN" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/airtel.png" alt="Airtel" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/Payoneer.svg" alt="Payoneer" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/visa.png" alt="Visa" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/9mobile.png" alt="9mobile" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/ikeja.png" alt="Ikeja" class="features-grid__img"></li>
+                        <li class="features-grid__item"><img src="./images/integrations/dstv.png" alt="DStv" class="features-grid__img"></li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -367,29 +354,31 @@
                     </div>
                     <p class="footer-content__logo-desc">Start spending the smart way</p>
                 </div>
-                <div class="footer-product footer-content__footer-product">
-                    <h5 class="footer-product__heading">Product</h5>
-                    <ul class="footers-product__list">
-                        <li class="footer-product__item"><a href="#" class="footer-product__link">Overview</a></li>
-                        <li class="footer-product__item"><a href="#" class="footer-product__link">Features</a></li>
-                        <li class="footer-product__item"><a href="#" class="footer-product__link">Solutions</a></li>
-                        <li class="footer-product__item"><a href="#" class="footer-product__link">Contact</a></li>
-                        <li class="footer-product__item"><a href="#" class="footer-product__link">Releases</a></li>
-                    </ul>
-                </div>
-                <div class="footer-resources footer-content__footer-resources">
-                    <h5 class="footer-resources__heading">Resources</h5>
-                    <ul class="footers-resources__list">
-                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Blog</a></li>
-                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Newsletter</a>
-                        </li>
-                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Events</a>
-                        </li>
-                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Help
-                                center</a></li>
-                        <li class="footer-resources__item"><a href="#" class="footer-resources__link">Support</a>
-                        </li>
-                    </ul>
+                <div class="footer-content__anchors">
+                    <div class="footer-product footer-content__footer-product">
+                        <h5 class="footer-product__heading">Product</h5>
+                        <ul class="footers-product__list">
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Overview</a></li>
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Features</a></li>
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Solutions</a></li>
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Contact</a></li>
+                            <li class="footer-product__item"><a href="#" class="footer-product__link">Releases</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-resources footer-content__footer-resources">
+                        <h5 class="footer-resources__heading">Resources</h5>
+                        <ul class="footers-resources__list">
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Blog</a></li>
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Newsletter</a>
+                            </li>
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Events</a>
+                            </li>
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Help
+                                    center</a></li>
+                            <li class="footer-resources__item"><a href="#" class="footer-resources__link">Support</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="get-app footer-content__get-app">
                     <h4 class="get-app__heading">Get the app</h4>
@@ -442,7 +431,6 @@
     <script src="./js/splide.js/splide.min.js"></script>
     <script>
         new Splide('.splide', {
-            arrows: false,
             type: 'loop',
             perPage: 1,
             pagination: false,
