--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     </li>
                 </ul>
             </nav>
+            <button class="mobile-menu__btn-mobile" type="button" data-modal-open mobile-close>Contact us</button>
             <button class="close-button mobile-menu__close-button" type="button" mobile-close>
                 <svg class="close-button__icon" width="30" height="30">
                     <use href="./images/icons.svg#icon-close"></use>
@@ -519,7 +520,6 @@
     <script>
         new WOW({
             offset: 200,
-            mobile: false,
         }).init();
     </script>
 </body>
